RESOLVED FIXED275483
[WPE] WPE Platform: wayland text input manager object should be released before the display
https://bugs.webkit.org/show_bug.cgi?id=275483
Summary [WPE] WPE Platform: wayland text input manager object should be released befo...
Carlos Garcia Campos
Reported 2024-06-14 06:27:55 PDT
It crashes otherwise, since the text input manager depends on the display
Attachments
Carlos Garcia Campos
Comment 1 2024-06-14 06:29:56 PDT
EWS
Comment 2 2024-06-18 05:08:24 PDT
Committed 280117@main (6a0df11413db): <https://commits.webkit.org/280117@main> Reviewed commits have been landed. Closing PR #29821 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.