[WPE] WPE Platform: wayland text input manager object should be released before the display https://bugs.webkit.org/show_bug.cgi?id=275483

Reviewed by Nikolas Zimmermann.

It crashes otherwise, since the text input manager depends on the display.

* Source/WebKit/WPEPlatform/wpe/wayland/WPEDisplayWayland.cpp:
(wpeDisplayWaylandDispose):

Canonical link: https://commits.webkit.org/280117@main